Fixed dropdown-menu CSS bug on mobile

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -334,6 +334,7 @@ ul {
 .navbar {
   white-space: nowrap;
   border: none;
+  line-height: 1;
   @media (min-width: 767px) {
     padding-left: 30px;
     padding-right: 30px;
